--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -5,9 +5,6 @@
   color: #3f51b5;
   transition: all 0.3s ease-in-out !important;
 }
-.logout-icon {
-  margin-left: 100px;
-}
 .user-actions {
   background-color: white;
   white-space: nowrap;
@@ -20,17 +17,29 @@
 
   position: absolute;
   top: 40px;
-  left: -100px;
+  left: -120px;
   z-index: 1000;
+}
+.user-actions .icon-box {
+  width: 100%;
+  margin: 0 auto;
 }
 .user-actions .icon-box .tooltip-logout {
   top: 5px;
-  left: 10px;
+  left: 45px;
 }
 .user-actions .icon-box .tooltip-logout::before {
-  content: none;
+  content: "";
+  border-right: 5px solid #3f51b5;
+  border-bottom: 5px solid transparent;
+  border-top: 5px solid transparent;
+  border-left: 5px solid transparent;
+
+  position: absolute;
+  top: 9px;
+  left: -5px;
 }
-.user-actions .icon-box .tooltip-logout::after {
+/* .user-actions .icon-box .tooltip-logout::after {
   content: "";
   border-right: 5px solid transparent;
   border-bottom: 5px solid transparent;
@@ -40,7 +49,7 @@
   position: absolute;
   top: 9px;
   right: -10px;
-}
+} */
 .icon-box {
   position: relative;
 }
@@ -50,8 +59,6 @@
   border: 2px solid #3f51b5;
   border-radius: 50%;
   padding: 5px;
-  position: relative;
-  top: 5px;
 }
 .icon-box .icon:hover {
   color: darkblue;
@@ -61,6 +68,7 @@
   background-color: #3f51b5;
   color: white;
   border-radius: 0.5rem;
+  font-family: "Manrope";
 
   margin: 0.4rem;
   padding: 2px 5px;
@@ -70,7 +78,7 @@
 
   position: absolute;
   top: 45px;
-  left: -20px;
+  left: -15px;
 
   transition: all 0.1s ease-in;
 }
