--- a/src/components/Posts/Post/style.css
+++ b/src/components/Posts/Post/style.css
@@ -45,3 +45,11 @@
   left: 50%;
   transform: translateX(-50%);
 }
+.title {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: none;
+  border: 1px solid blue;
+}
